fix flex display in detail at higher resolution.  left align detail at higher resolution

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@ body {
   background-color: #000
 }
 .App {
-  text-align: center;
   color: #ccc;
 }
 
