--- a/src/components/SpotifySearchContainer/SpotifySearchContainer.css
+++ b/src/components/SpotifySearchContainer/SpotifySearchContainer.css
@@ -33,6 +33,10 @@
 }
 
 @media (max-width: 893px) {
+    .App {        
+        text-align: center;
+    }
+
     .spotify_search-container {
         display: flex;
         flex-direction: column;
@@ -45,6 +49,10 @@
 
     .spotify_result-detail > button {
         display: block;
+    }
+    .spotify_result-detail .spotify_result--flex-container {
+        width: auto;
+        justify-content: center;
     }
 
     .spotify_search-result  {
